SUBDIRS = seq shmem mpi3 gasnet ibv fjmpi

otherincludedir = $(includedir)/madm

otherinclude_HEADERS = \
    allocator.h \
    ampeer.h \
    collectives.h \
    comm_base.h \
    comm_system.h \
    fetch_and_add.h \
    id_pool.h \
    madm_comm-decls.h \
    madm_comm-cdecls.h \
    madm_comm-inl.h \
    madm_comm_config.h \
    madm_comm_acconfig.h \
    options.h \
    process_config.h \
    threadsafe.h \
    ibv.h

